Fixed any merge-caused errors.